released advance analytics features